# tutorials

./: .gitignore  .gitmodules  BetheDMFT.ipynb  GreensFunction.ipynb  IPT.ipynb  IPT.py  IPT_orig.py  ImpurityCTQMC.ipynb  IntroNotebook.ipynb  NotebookTest1.ipynb  NotebookTest2.ipynb  README.md  SymPyfy Tutorial.ipynb  SymPyfy.ipynb  TB_to_sympy.py  TightBinding.ipynb  Tut1-GreensFunction.ipynb  Tut2-HDFArchives.ipynb  Tut3-TightBinding.ipynb  Tut4-DMFT+IPT.ipynb  Tut5-DMFT+CTQMC.ipynb  Tut6-ProgressBar.ipynb  sc.py
AbinitioDMFT/: 01-solid_dmft.ipynb  02-FermiSee.ipynb  03-phase-diagram-exploration.ipynb  04-HubbardI-comparison.ipynb  dmft_config.ini  dmft_config_hubbardI.ini  job_solid_dmft.sh
AbinitioDMFT/solutions/: 01s-solid_dmft.ipynb  02s-FermiSee.ipynb  03s-phase-diagram-exploration.ipynb  04s-HubbardI-comparison.ipynb  dmft_config.ini  dmft_config_hubbardI.ini
Advanced/: TB_to_sympy.ipynb
Advanced/cpp2py/: 1-SimpleFunction.ipynb  2-TriqsGf.ipynb  3-LittleClass.ipynb  3-TriqsGf.ipynb  4-LittleClass.ipynb  4-Parameters.ipynb  5-IsingSpinQMC.ipynb  5-Parameters.ipynb  6-IsingSpinQMC.ipynb
Basics/: 00a-Introducing_the_ipython_notebook.ipynb  00b-Matplotlib_Examples.ipynb  01-Greens_functions.ipynb  02-Archiving_your_data.ipynb  03-Operators.ipynb  04-Multivariable_Green_functions.ipynb  05-Multivariable_Green_functions.ipynb
Basics/solutions/: 01s-Greens_functions.ipynb
C++/: CMakeLists.txt  array.cpp  gf.cpp  gtodelta.cpp
C++/ctint/: CMakeLists.txt
C++/ctint/c++/: CMakeLists.txt  ctint.cpp  ctint.hpp
C++/ctint/python/: ctint_tutorial_desc.py
C++/ctint/test/: CMakeLists.txt
C++/ctint/test/c++/: CMakeLists.txt  anderson_c.cpp  anderson_c.ref.h5
C++/ctint/test/python/: CMakeLists.txt  anderson.output.h5  anderson.py  anderson.ref.h5
ConceptLectureExample/: trace_ab.cpp
ExampleApplication/: CMakeLists.txt  README.md
ExampleApplication/c++/: hello_world.cpp
ExampleApplication/python/: CMakeLists.txt  __init__.py  hello_world_desc.py
ModelDMFT/: 01-IPT_and_DMFT.ipynb  02-Introduction_to_the_CTHYB_solver.ipynb  03-Single-orbital_Hubbard_with_CTQMC.ipynb  04-Two-orbital_Hubbard_with_CTQMC.ipynb  05-VBDMFT_Hubbard.ipynb
ModelDMFT/scripts/: one_band.py  two_band.py  vbdmft.py
ModelDMFT/solutions/: 01s-IPT_and_DMFT.ipynb  03s-Single-orbital_Hubbard_with_CTQMC.ipynb  04s-Two-orbital_Hubbard_with_CTQMC.ipynb  05s-VBDMFT_Hubbard.ipynb
SchoolTutorialsPython/: 03-Archiving_your_data.ipynb  04-IPT_and_DMFT.ipynb  06-Operators.ipynb  07-Introduction_to_the_CTHYB_solver.ipynb  09-Single-orbital_Hubbard_with_CTQMC_solution.ipynb  run_two_bands.py
SchoolTutorialsPython/other/: hello_world.ipynb
SchoolTutorialsPython/results_two_bands/: half-U1.00-J0.20.h5  half-U10.00-J0.00.h5  half-U11.00-J0.00.h5  half-U11.00-J1.10.h5  half-U9.00-J0.00.h5  quarter-U6.00-J0.00.h5  quarter-U7.00-J0.70.h5  quarter-U8.00-J0.80.h5
TRIQSPaperExamples/c++/: CMakeLists.txt  array.cpp  gf.cpp  gtodelta.cpp
TRIQSTutorialsPython/: 00a-Introducing_the_ipython_notebook.ipynb  00b-Matplotlib_Examples.ipynb  01-Greens_functions.ipynb  02-Greens_functions_solution.ipynb  03-Archiving_your_data.ipynb  04-IPT_and_DMFT.ipynb  05-IPT_and_DMFT_solution.ipynb  06-Operators.ipynb  07-Introduction_to_the_CTHYB_solver.ipynb  08-Single-orbital_Hubbard_with_CTQMC.ipynb  09-Single-orbital_Hubbard_with_CTQMC_solution.ipynb  10-Two-orbital_Hubbard_with_CTQMC.ipynb  11-Two-orbital_Hubbard_with_CTQMC_solution.ipynb  12-VBDMFT_Hubbard.ipynb  13-VBDMFT_Hubbard_solution.ipynb  run_single_band.py  run_two_bands.py  run_vbdmft.py
TRIQSTutorialsPython/TPSC/: 00-Multivariable_Green_functions.ipynb  01-Fermi_surface_nesting.ipynb  01-Multivariable_Green_functions_exercice.ipynb  02-Fermi_surface_nesting_solution.ipynb  02-Multivariable_Green_functions_solution.ipynb  03-Lindhard.ipynb  04-Lindhard_solution.ipynb  05-RPA.ipynb  06-RPA_solution.ipynb  07-TPSC.ipynb  08-TPSC_solution.ipynb  09-TPSC_MerminWagner.ipynb  10-TPSC_MerminWagner_solution.ipynb  TPSC-1.ipynb  (+9 more)
TwoParticleResponse/: 01-Fermi_surface_nesting.ipynb  02-Lindhard.ipynb  03-RPA.ipynb  04-TPSC.ipynb  05-TPSC_MerminWagner.ipynb
c++/: CMakeLists.txt  gf.cpp  gtodelta.cpp
concepts/: trace_ab.cpp
cpp2py/: 1-SimpleFunction.ipynb  2-Function_with_array_stl.ipynb  3-TriqsGf.ipynb  4-LittleClass.ipynb  5-Parameters.ipynb  6-IsingSpinQMC.ipynb
ctint_tutorial/: CMakeLists.txt
ctint_tutorial/c++/: CMakeLists.txt  ctint.cpp  ctint.hpp
ctint_tutorial/cmake/: sitecustomize.py
ctint_tutorial/examples/: dmft_bethe.ipynb  dmft_bethe.py
ctint_tutorial/python/: CMakeLists.txt  __init__.py  ctint_tutorial_desc.py
ctint_tutorial/test/c++/: anderson_c.cpp  anderson_c.ref.h5
ctint_tutorial/test/python/: CMakeLists.txt  anderson.py
hello_world/: CMakeLists.txt
hello_world/c++/: CMakeLists.txt  hello_world.hpp
hello_world/python/: CMakeLists.txt
python/: 00 - Introducing the ipython notebook.ipynb  00a-Introducing_the_ipython_notebook.ipynb  00b-Introducing_Matplotlib.ipynb  00b-Matplotlib_Examples.ipynb  01 - Green's functions.ipynb  01-Greens_functions.ipynb  02 - Green's functions solution.ipynb  02-Greens_functions_solution.ipynb  03 - Archiving your data.ipynb  03-Archiving_your_data.ipynb  04 - IPT and DMFT.ipynb  04-IPT_and_DMFT.ipynb  05 - IPT and DMFT solution.ipynb  05-IPT_and_DMFT_solution.ipynb  06 - Operators.ipynb  06-Operators.ipynb  07 - Introduction to the CTQMC solver.ipynb  07-Introduction_to_the_CTHYB_solver.ipynb  07-Introduction_to_the_CTQMC_solver.ipynb  08 - Single-orbital Hubbard with CTQMC.ipynb  08-Single-orbital_Hubbard_with_CTQMC.ipynb  09 - Single-orbital Hubbard with CTQMC solution.ipynb  09-Single-orbital_Hubbard_with_CTQMC_solution.ipynb  10-Tight_binding.ipynb  10-Two-orbital_Hubbard_with_CTQMC.ipynb  11 - Two-orbital Hubbard with CTQMC solution.ipynb  11-Progress_bar.ipynb  11-Two-orbital_Hubbard_with_CTQMC_solution.ipynb  README.md  Tut0-IntroNotebook.ipynb  Tut3-TightBinding.ipynb  Tut6-ProgressBar.ipynb  hello_world.ipynb  random_gen.ipynb  run_single_band.py  run_two_bands.py  trace.ipynb
(+196 files in other folders)
